--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-essentials-start",
   "version": "0.0.0",
-  "homepage": "https://gitname.github.io/react-gh-pages",
+  "homepage": "https://kamenkraychev.github.io",
   "predeploy": "npm run build",
   "deploy": "gh-pages -d build",
   "scripts": {
